--- a/workshop-backend-part-1-php/docker-compose.yml
+++ b/workshop-backend-part-1-php/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.3'
 services:
   backend:
     image: php:7.4.26
+    platform: linux/amd64
     ports:
         - 127.0.0.1:80:80
     volumes:
